<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offers"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/ic_newproducts"
            android:title="@string/new_products" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/ic_new_product"
            android:title="@string/my_carts" />

    </group>
</menu>